language/move-compiler/tests/move_check/typing/vector_mismatched_args_non_base_type.exp
error[E04006]: invalid subtype
  ┌─ tests/move_check/typing/vector_mismatched_args_non_base_type.move:7:9
  │
7 │         vector<&mut u64>[&0];
  │         ^^^^^^^^^^^^^^^^^^^^
  │         │      │         │
  │         │      │         Given: '&{integer}'
  │         │      Expected: '&mut u64'
  │         Invalid 'vector' instantiation. Invalid argument type

error[E04004]: expected a single non-reference type
  ┌─ tests/move_check/typing/vector_mismatched_args_non_base_type.move:7:9
  │
7 │         vector<&mut u64>[&0];
  │         ^^^^^^^^^^^^^^^^^^^^
  │         │      │
  │         │      Expected a single non-reference type, but found: '&mut u64'
  │         Invalid 'vector' type

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/vector_mismatched_args_non_base_type.move:8:9
  │
8 │         vector[(), (0, 1)];
  │         ^^^^^^^^^^^^^^^^^^
  │         │      │   │
  │         │      │   Found: '({integer}, {integer})'. It is not compatible with the other type.
  │         │      Found: '()'. It is not compatible with the other type.
  │         Invalid 'vector' instantiation. Incompatible argument

